examples/demos/failing/91_fail_lexical_invalid_char.hing
shuru
num a = 5
@ 
bol a
khatam
